# infergrade-runner

./: .dockerignore  .editorconfig  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  deny.toml  ruff.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
apps/desktop-runner/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop-runner/src-tauri/binaries/: infergrade-sidecar-aarch64-apple-darwin
apps/desktop-runner/src-tauri/capabilities/: default.json
apps/desktop-runner/src-tauri/icons/: icon.icns
apps/desktop-runner/src-tauri/src/: lib.rs  main.rs
apps/runner-cli/: Cargo.toml
apps/runner-cli/src/: main.rs
crates/runner-engine/: Cargo.toml
crates/runner-engine/src/: benchmark.rs  errors.rs  events.rs  hub_client.rs  lib.rs  pairing.rs  profile.rs  runtime_catalog.rs  token_store.rs  worker_protocol.rs
crates/runner-engine/tests/: hub_client.rs  native_command_runtime.rs  native_first_run.rs  pairing.rs  pairing_status.rs  state_events.rs  worker_protocol.rs
crates/runner-engine/tests/fixtures/: runtime_build_identity.json
docs/: README.md  agent_api.md  alpha_launch_checklist.md  apple_silicon_private_beta_runbook.md  artifact_memory_fit_policy.md  benchmark_legitimacy_program.md  benchmark_selection_and_coverage.md  bounded_agent_autopilot.md  calibration_budget_v0_3_1.md  capability_benchmarks.md  codex_private_beta_readiness.md  codex_v0_2_0_completion_sprint_planning.md  codex_v0_2_0_review.md  codex_v0_2_10_sprint_planning.md  codex_v0_2_11_sprint_planning.md  codex_v0_2_12_sprint_planning.md  codex_v0_2_13_sprint_planning.md  codex_v0_2_14_sprint_planning.md  codex_v0_2_15_sprint_planning.md  codex_v0_2_16_sprint_planning.md  codex_v0_2_17_sprint_planning.md  codex_v0_2_18_sprint_planning.md  codex_v0_2_1_sprint_planning.md  codex_v0_2_20_sprint_planning.md  codex_v0_2_2_sprint_planning.md  codex_v0_2_3_sprint_planning.md  codex_v0_2_4_sprint_planning.md  codex_v0_2_5_sprint_planning.md  codex_v0_2_6_sprint_planning.md  codex_v0_2_7_sprint_planning.md  codex_v0_2_8_sprint_planning.md  codex_v0_2_9_sprint_planning.md  codex_v1_readiness_audit.md  contract_ownership.md  coverage_expansion_v0_3_5.md  decision_workflow.md  demo_evidence.md  desktop_runner_app_discovery.md  desktop_runner_distribution.md  desktop_runner_rust_engine_workplan.md  (+63 more)
python/runner-core/: README.md  pyproject.toml  setup.py
python/runner-core/src/infergrade/: __init__.py  __main__.py  analysis.py  artifact_memory_fit.py  artifacts.py  autopilot.py  benchmark_catalog.py  capabilities.py  capability_calibration.py  capability_contract.py  capability_scoring.py  capability_summary.py  cli.py  constants.py  container_runtime.py  contracts.py  cuda.py  demo_evidence.py  doctor.py  environment.py  gguf.py  images.py  memory_fit.py  models.py  ontology.py  pairing.py  paths.py  profiles.py  progress.py  protocol_identity.py  releases.py  reports.py  request.py  run_configs.py  runner.py  runtime_locks.py  runtimes.py  support.py  templates.py  tls.py  (+4 more)
python/runner-core/src/infergrade/adapters/: __init__.py  base.py  llama_cpp.py  vllm.py
python/runner-core/src/quantbench/: __init__.py
python/runner-core/tests/: test_analysis.py  test_artifact_memory_fit.py  test_artifacts.py  test_autopilot.py  test_benchmark_catalog.py  test_branch_sync_plan.py  test_capabilities.py  test_capability_calibration.py  test_capability_container_runners.py  test_capability_contract.py  test_capability_scoring.py  test_capability_summary.py  test_cli.py  test_contracts.py  test_cuda.py  test_demo_evidence.py  test_desktop_runner_capabilities.py  test_doctor.py  test_end_to_end_proof_path.py  test_environment.py  test_images.py  test_llama_cpp_adapter.py  test_llama_cpp_runtime_policy.py  test_local_evidence_dogfood.py  test_memory_fit.py  test_ontology.py  test_pairing.py  test_protocol_identity.py  test_release_ci.py  test_request_resolution.py  test_run_configs.py  test_runner.py  test_runtime_catalog.py  test_runtime_catalog_signing.py  test_runtime_locks.py  test_runtimes.py  test_start_local_listener_script.py  test_support.py  test_templates.py  test_tls.py  (+4 more)
runtime/: llama_cpp_release_policy.json
schemas/: README.md  capability_catalog.json  contract_manifest.json  runtime_trust_catalog.json
scripts/: audit_capability_calibration.py  branch_sync_plan.py  build_alpha_images.sh  build_desktop_runner.sh  build_desktop_sidecar.sh  build_release_bundle.sh  build_release_images.sh  build_runtime_catalog.py  check_llama_cpp_runtime_policy.py  check_public_release_readiness.py  check_release_tag.py  check_version_bump.py  check_versions.py  dogfood_tinyllama_ladder.sh  export_alpha_images.sh  export_contract_bundle.py  export_release_bundle.py  export_release_images.sh  sync_versions.py  (+15 more)
(+64 files in other folders)
