[package]
name = "infergrade_runner_engine"
version = "0.1.45"
edition = "2021"
description = "Shared Rust runner engine logic for InferGrade desktop and CLI frontends"

[dependencies]
reqwest = { version = "0.12.24", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
url = "2.5.4"

[dev-dependencies]
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
