[package]
name = "infergrade_runner_engine"
version = "0.3.43"
edition = "2021"
license = "Apache-2.0"
description = "Shared Rust runner engine logic for InferGrade desktop and CLI frontends"

[dependencies]
ed25519-dalek = "2.2.0"
reqwest = { version = "0.12.24", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.10.9"
flate2 = "1.1.5"
tar = "0.4.44"
url = "2.5.4"

[dev-dependencies]
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
