[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "infergrade-runner-core"
version = "0.2.0"
description = "Portable benchmarking runner core for InferGrade."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "Apache-2.0" }
authors = [
  { name = "Brian Fogelson" }
]
dependencies = []

[project.scripts]
infergrade = "infergrade.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
