[package]
name = "infergrade_desktop_runner"
version = "0.1.0"
description = "Desktop companion app for the InferGrade Runner"
authors = ["Brian Fogelson"]
edition = "2021"

[lib]
name = "infergrade_desktop_runner_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
