[package]
name = "infergrade_desktop_runner"
version = "0.3.19"
description = "Desktop companion app for the InferGrade Runner"
authors = ["Brian Fogelson"]
license = "Apache-2.0"
edition = "2021"

[lib]
name = "infergrade_desktop_runner_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
infergrade_runner_engine = { path = "../../../crates/runner-engine" }
keyring = { version = "3.6.3", features = ["apple-native", "windows-native", "linux-native-sync-persistent"] }
reqwest = { version = "0.12.24", default-features = false, features = ["json", "rustls-tls"] }
serde_json = "1.0.149"
tauri = { version = "2", features = [] }
tauri-plugin-deep-link = "2"
tauri-plugin-process = "2"
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"
